--- a/src/components/nav-catalog/nav-catalog.module.scss
+++ b/src/components/nav-catalog/nav-catalog.module.scss
@@ -15,7 +15,6 @@
   top: 66px;
   left: 0;
   height: auto;
- // padding: 1rem 5rem;
   &.visible {
     display: block;
   }
@@ -25,6 +24,7 @@
       position: absolute;
       right: 1rem;
       top: 1rem;
+      z-index: 20;
     }
   }
 
