--- a/src/components/product-card/product-card.module.scss
+++ b/src/components/product-card/product-card.module.scss
@@ -10,8 +10,8 @@
   justify-content: space-between;
   .imageContainer {
     overflow: hidden;
-    width: 100%;
-    height: 300px;
+    margin: 2rem 1rem 1rem;
+    height: 250px;
     position: relative;
     .image {
       object-fit: contain;
@@ -19,11 +19,15 @@
   }
   .description {
     height: 100px;
-    padding: 1rem 0;
+   // padding: 1rem 0;
     color: $color-blue-gray;
+    .type{
+      font-size: 0.85rem;
+      font-weight: 700;
+    }
     .name {
       display: block;
-      padding-top: 0.2rem;
+      margin: 0.25rem 0 0.5rem;
       color: $color-green;
       font-size: 0.9rem;
       font-weight: 700;
