--- a/src/app/(main)/product/[id]/product-page.module.scss
+++ b/src/app/(main)/product/[id]/product-page.module.scss
@@ -55,9 +55,17 @@
     .title {
       display: flex;
       justify-content: space-between;
+      flex-direction: column-reverse;
+      @media screen and (min-width: 768px) {
+      
+      }
+      @media screen and (min-width: 1024px) {
+        flex-direction: row;
+      }
     }
     .ratingTitle {
       width: fit-content;
+      height: fit-content;
       border: $border;
       margin: 1rem 0;
       padding: 1rem 1rem 0.5rem;
