--- a/src/app/(main)/product/[id]/product-page.module.scss
+++ b/src/app/(main)/product/[id]/product-page.module.scss
@@ -1,8 +1,11 @@
 @import '@/styles/variables.scss';
 .productContainer {
   width: 100%;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+
+  @media screen and (min-width: 1024px) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
 
   .imagesBlock {
     padding: 1rem;
@@ -19,7 +22,10 @@
   }
 
   .descriptionBlock {
-    padding: 1rem;
+    padding: 1rem 0 2rem;
+    @media screen and (min-width: 1024px) {
+      padding: 1rem;
+    }
     .titleBlock {
       display: flex;
       justify-content: space-between;
@@ -43,7 +49,7 @@
   padding: 2rem 0;
   .characteristic {
     width: 100%;
-    margin: 2rem 0;
+   // margin: 2rem 0;
     list-style: none;
     li {
       padding: 0.25rem;
