--- a/src/components/header/mob-menu/mob-menu.module.scss
+++ b/src/components/header/mob-menu/mob-menu.module.scss
@@ -42,6 +42,9 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      >:first-child{
+        color: $color_green
+      }
     }
     .search {
       padding: 1rem 1rem 0;
