--- a/src/components/main/main-swiper/main-swiper.module.scss
+++ b/src/components/main/main-swiper/main-swiper.module.scss
@@ -2,7 +2,6 @@
 
 .container {
   width: 100%;
-  height: 500px;
   margin: 1rem auto;
   & > div > div:nth-child(2),
   & > div > div:nth-child(3) {
@@ -29,7 +28,10 @@
     // transition: $transition;
     .slide {
       width: 100%;
-      height: 500px;
+      height: 400px;
+      @media screen and (min-width: 1024px) {
+       height: 470px;
+      }
       .slideImage {
         object-fit: cover;
       }
