--- a/src/app/(main)/product/[id]/reviews/review/review.module.scss
+++ b/src/app/(main)/product/[id]/reviews/review/review.module.scss
@@ -1,25 +1,48 @@
 @import '@/styles/variables.scss';
-.review{
-    padding: 1rem;
-    border: $border;
-    margin-top: 1rem;
-    background-color: rgb(229, 231, 235, 0.1);
-    border-radius: $br-small;
-    .title{
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      h5{
-        font-size: 0.85rem;
-        font-weight: 500;
-      }
-    }
-    .text{
-        display: block;
-        padding: 1rem 0;
-    }
-    .date{
-        font-size: 0.85rem;
-        text-align: right;
+.review {
+  padding: 1rem;
+  border: $border;
+  margin-bottom: 1rem;
+  background-color: rgb(229, 231, 235, 0.1);
+  border-radius: $br-small;
+  &:last-child{
+    margin-bottom: 0;
+  }
+  .title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    h5 {
+      font-size: 0.85rem;
+      font-weight: 700;
     }
   }
+  .text {
+    display: block;
+    padding: 1rem 0;
+  }
+  .date {
+    font-size: 0.85rem;
+    text-align: right;
+  }
+  .answer {
+    padding: 1rem;
+    border: $border;
+    width: 80%;
+    margin-left: 20%;
+    margin-top: 1rem;
+    background-color: $color_white;
+    border-radius: $br-small;
+    .answerTitle {
+      font-size: 0.85rem;
+      font-weight: 700;
+    }
+    .answerText {
+      padding: 0.5rem 0;
+    }
+    .answerDate {
+      font-size: 0.85rem;
+      text-align: right;
+    }
+  }
+}
