--- a/src/app/(main)/product/[id]/product-page.module.scss
+++ b/src/app/(main)/product/[id]/product-page.module.scss
@@ -49,7 +49,7 @@
   padding: 2rem 0;
   .characteristic {
     width: 100%;
-   // margin: 2rem 0;
+    // margin: 2rem 0;
     list-style: none;
     li {
       padding: 0.25rem;
@@ -62,21 +62,28 @@
       display: flex;
       justify-content: space-between;
       flex-direction: column-reverse;
+
       @media screen and (min-width: 768px) {
-      
       }
       @media screen and (min-width: 1024px) {
         flex-direction: row;
+        align-items: flex-end;
       }
     }
     .ratingTitle {
       width: fit-content;
       height: fit-content;
+      width: 100%;
       border: $border;
-      margin: 1rem 0;
+      margin-top: 1rem;
       padding: 1rem 1rem 0.5rem;
       background-color: rgb(229, 231, 235, 0.1);
       border-radius: $br-small;
+      @media screen and (min-width: 1024px) {
+        margin-top: 0;
+        width: calc(30% - 1rem);
+        height: 305px;
+      }
       .text {
         font-size: 0.85rem;
         font-weight: 500;
@@ -95,6 +102,25 @@
           font-size: 0.85rem;
           font-weight: 500;
         }
+      }
+    }
+    .reviews {
+      margin-top: 1rem;
+      max-height: 1000px;
+      overflow: auto;
+      &::-webkit-scrollbar {
+        width: 0.4rem;
+      }
+      &::-webkit-scrollbar-track {
+        background-color: $color_lightgray;
+        border-radius: $br-small;
+      }
+      &::-webkit-scrollbar-thumb {
+        background: $linear-gradient-green;
+        border-radius: $br-small;
+      }
+      &::-webkit-scrollbar-thumb:hover {
+        background: $linear-gradient-green-reverce;
       }
     }
   }
