--- a/src/components/product-page/description/product-nav-links/product-nav-links.module.scss
+++ b/src/components/product-page/description/product-nav-links/product-nav-links.module.scss
@@ -3,12 +3,27 @@
   margin-bottom: 2rem;
   border-bottom: $border;
   display: flex;
+  justify-content: space-between;
   gap: 1rem;
+  font-size: 0.85rem;
+  @media screen and (min-width: 380px) {
+    font-size: 1rem;
+  }
+  @media screen and (min-width: 768px) {
+    justify-content: start;
+  }
   .linkItem {
-    display: block;
-    padding: .5rem 0;
+    width: 33%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 0.5rem 0;
     &.active {
       border-bottom: 2px solid $color_green;
+    }
+    @media screen and (min-width: 768px) {
+      width: auto;
     }
   }
 }
