--- a/src/components/catalog/catalog.module.scss
+++ b/src/components/catalog/catalog.module.scss
@@ -5,8 +5,11 @@
   .products {
     padding: 1.5rem 0;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     gap: .75rem;
+    @media screen and (min-width: 380px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
     @media screen and (min-width: 768px) {
       grid-template-columns: repeat(3, 1fr);
       gap: 1rem;
