--- a/src/components/product-card/product-badge/product-badge.module.scss
+++ b/src/components/product-card/product-badge/product-badge.module.scss
@@ -7,6 +7,7 @@
   padding: .5rem;
   color: $color_white;
   font-size: 500;
+  border-radius: $br-small;
 }
 .recomended{
   background: $linear-gradient-blue-gray;
