--- a/src/components/review/breadcrumbs/breadcrumbs.module.scss
+++ b/src/components/review/breadcrumbs/breadcrumbs.module.scss
@@ -1,10 +1,23 @@
 @import '@/styles/variables.scss';
 .breadcrumbs {
-  margin: 1rem;
+  margin: 1rem 0;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   color: $color_gray;
   position: relative;
+  font-size: .85rem;
+  
+  @media screen and (min-width: 768px) {
+    margin: 1.5rem 0;
+    font-size: 1rem;
+  }
+  >a:first-child{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
   > a:last-child {
     color: $color_lightgray;
     cursor: auto;
@@ -13,4 +26,5 @@
   svg:nth-last-child(2) {
     color: $color_lightgray;
   }
+  
 }
