--- a/src/components/ui/rating/rating.module.scss
+++ b/src/components/ui/rating/rating.module.scss
@@ -2,11 +2,14 @@
 .container{
     display: flex;
     align-items: center;
-    gap: .5rem;
+    gap: .1rem;
     &.margin{
         margin-bottom: 1rem;
     }
     .star{
+        display: flex;
+        align-items: center;
+        justify-content: center;
         color: $color_green;
     }
 }
