--- a/src/components/ui/container/container.module.scss
+++ b/src/components/ui/container/container.module.scss
@@ -3,7 +3,7 @@
     width: 100%;
     max-width: 1900px;
     margin: 0 auto;
-    padding: 0 1rem;
+    padding: 0 .5rem;
     @media screen and (min-width: 1024px) {
       padding: 0 3rem;
     }
