--- a/src/components/main/main-swiper/main-swiper.module.scss
+++ b/src/components/main/main-swiper/main-swiper.module.scss
@@ -29,6 +29,7 @@
     .slide {
       width: 100%;
       height: 400px;
+      position: relative;
       @media screen and (min-width: 1024px) {
        height: 470px;
       }
