--- a/src/components/cart/cart.module.scss
+++ b/src/components/cart/cart.module.scss
@@ -19,6 +19,7 @@
   top: 0;
   width: 100vw;
   height: 100vh;
+  height: 100vh;
   background-color: rgb(255, 255, 255, 0.95);
   backdrop-filter: blur(10px);
   padding: 1.5rem 1rem;
